added hungry prompt

--- a/hungry.ipynb
+++ b/hungry.ipynb
@@ -2,19 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm hungry\n"
+      "Are you hungryno\n",
+      "Do your job\n"
      ]
     }
    ],
    "source": [
-    "print(\"I'm hungry\")"
+    "hungry=input(\"Are you hungry\")\n",
+    "if hungry==\"yes\":\n",
+    "    print(\"Eat prasadam\")\n",
+    "else:\n",
+    "    print(\"Do your job\")"
    ]
   }
  ],
